--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
             <artifactId>shiro-all</artifactId>
             <version>1.4.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
@@ -109,6 +117,19 @@
                     </execution>
                 </executions>
             </plugin>
+
+
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <!--热部署配置-->
+                    <configuration>
+                        <fork>true</fork>
+                    </configuration>
+                </plugin>
+
+
+
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.2-beta-5</version>
