--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
 
     <name>efo</name>
-    <description>简单的线上文件管理系统</description>
+    <description>个人文档智能管理系统</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
